This this the changelog file for the Pothos GUI toolkit.

Release 0.2.1 (pending)
==========================

- Splash screen prints the current saved graph loading
- Fix graph editor handle cut to check for active graph
- Topology evaluator connections check for port existence

Release 0.2.0 (2015-06-17)
==========================

- Created stats dialog for viewing JSON topology stats
- Added properties panel for graph-wide global variables
- Disabling a block drops the evaluated block instance
- Enable/disable hooks for connections and breakers
- Zoom in and zoom out centering adjustments

Release 0.1.1 (2015-06-16)
==========================

- Fixed display of ellipsis Unicode character on Windows
- Planned cancel of the properties panel before load state
- Filled in the implementation for Graph Editor save all
- Prefix QtColorPicker library to avoid install collisions
- QDoubleSpinBox parameter entry locale support fix
- Fixed block ID update while editing

Release 0.1.0 (2014-12-21)
==========================

This is the first public release of the Pothos GUI toolkit.